--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.30.1",
     "recharts": "2.15.4",
